tests/paczka1/small_fuzzy/34165799.err
Error in line 6: EJQsi6HQ1 S475 91,1
Error in line 3: 7PdX A66 6,2
